tests/ui/lowering/span-bug-issue-121431.stderr
error[E0405]: cannot find trait `CallbackMarker` in this scope
  --> $DIR/span-bug-issue-121431.rs:1:21
   |
LL | fn bug<T>() -> impl CallbackMarker< Item = [(); { |_: &mut ()| 3; 4 }] > {}
   |                     ^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
